// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`event.filter should drop undefined values: evenNum event graph 1`] = `
"Seq [
  1. Single Emit(number →? *),
  2. Multi [
     *  Single Run
  ]
]"
`;

exports[`event.filter should drop undefined values: num event graph 1`] = `
"Seq [
  1. Single Emit(number),
  2. Multi [
     *  Seq [
        1. Single Compute,
        2. Single Filter,
        3. Single Emit(number →? *),
        4. Multi [
           *  Single Run
        ]
     ]
  ]
]"
`;
